--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             margin: 0 auto !important;
         }
 
+        p, span{
+            color: rgba(19, 19, 24, 0.60);
+            font-weight: 500;
+        }
+
     </style>
 </head>
 <body>
@@ -43,7 +48,7 @@
                           <li class="hover:text-[#FF4240]"><a>Contact </a></li>
                         </ul>
                       </div>
-                      <a class="btn btn-ghost text-2xl md:text-4xl font-bold">Hockey<span class="text-[#FF4240]">’</span>s</a>
+                      <a class="btn btn-ghost text-2xl md:text-4xl font-extrabold">Hockey<span class="text-[#FF4240]">’</span>s</a>
                     </div>
                     <div class="navbar-center hidden lg:flex">
                         <ul class="menu menu-horizontal px-1">
@@ -56,7 +61,7 @@
                     </div>
                     <div class="navbar-end">
                         <span class="mr-3 hidden md:inline"><img src="images/search.png" alt=""></span>
-                      <a class="btn bg-[#ff4240]">Button</a>
+                      <a class="btn font-bold text-xl text-white bg-[#ff4240]">Get Ticket</a>
                     </div>
                   </div>
             </div>
@@ -95,28 +100,28 @@
         <section>
             <div class="py-20 mx-auto">
                 <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
-                    <h3 class="md:text-4xl text-2xl font-bold">Professional Hockeys Club</h3>
+                    <h3 class="md:text-4xl text-2xl font-extrabold">Professional Hockeys Club</h3>
                     <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-4">
                     <div class="text-center space-y-4 mt-12 mx-10 md:mx-0">
                         <div class="radial-progress text-red-500" style="--value:87;" role="progressbar">87%</div>
-                        <h4 class="text-xl">Prayer Facility</h4>
+                        <h4 class="text-xl font-semibold">Prayer Facility</h4>
                         <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
                     </div>
                     <div class="text-center space-y-4 mt-12 mx-10 md:mx-0">
                         <div class="radial-progress text-green-500" style="--value:95;" role="progressbar">95%</div>
-                        <h4 class="text-xl">Prayer Facility</h4>
+                        <h4 class="text-xl font-semibold">Prayer Facility</h4>
                         <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
                     </div>
                     <div class="text-center space-y-4 mt-12 mx-10 md:mx-0">
                         <div class="radial-progress text-orange-500" style="--value:90;" role="progressbar">90%</div>
-                        <h4 class="text-xl">Prayer Facility</h4>
+                        <h4 class="text-xl font-semibold">Prayer Facility</h4>
                         <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
                     </div>
                     <div class="text-center space-y-4 mt-12 mx-10 md:mx-0">
                         <div class="radial-progress text-blue-500" style="--value:80;" role="progressbar">80%</div>
-                        <h4 class="text-xl">Prayer Facility</h4>
+                        <h4 class="text-xl font-semibold">Prayer Facility</h4>
                         <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
                     </div>
                 </div>
@@ -124,29 +129,153 @@
         </section>
         <section>
             <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
-                <h3 class="md:text-4xl text-2xl font-bold">Program Sections</h3>
+                <h3 class="md:text-4xl text-2xl font-extrabold">Program Sections</h3>
                 <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-5 my-8">
-                <div class="rounded-2xl p-10 mt-4 md:pt-20  md:pr-16 bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/2.png)]">
+                <div class="rounded-2xl p-10 mt-4 md:pt-20  md:pr-16 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/2.png)]">
                     <div class="space-y-6">
-                        <h3 class="text-3xl text-white">Junior Program</h3>
+                        <h3 class="text-3xl font-bold text-white">Junior Program</h3>
                         <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-                        <button class="bg-[#ff4240] px-12 py-4 rounded-xl">Register Now!</button>
+                        <button class="bg-[#ff4240] text-white font-bold text-xl px-10 py-3 rounded-xl">Register Now!</button>
                     </div>
                 </div>
-                <div class="rounded-2xl p-10 mt-4 md:pt-20  md:pr-16 bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/3.png)]">
+                <div class="rounded-2xl p-10 mt-4 md:pt-20  md:pr-16 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/3.png)]">
                     <div class="space-y-6">
-                        <h3 class="text-3xl text-white">Teenager Program</h3>
+                        <h3 class="text-3xl font-bold text-white">Teenager Program</h3>
                         <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-                        <button class="bg-[#ff4240] px-12 py-4 rounded-xl">Register Now!</button>
+                        <button class="bg-[#ff4240] font-bold text-white text-xl px-10 py-3 rounded-xl">Register Now!</button>
                     </div>
                 </div>
-                <div class="rounded-2xl bg-cover md:col-span-2 mt-4 p-10 bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/4.png)]">
+                <div class="rounded-2xl bg-cover md:col-span-2 mt-4 p-10 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/4.png)]">
                     <div class="space-y-6 md:w-1/2 md:mt-28">
-                        <h3 class="text-3xl text-white">Professional Program</h3>
+                        <h3 class="text-3xl font-bold text-white">Professional Program</h3>
                         <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-                        <button class="bg-[#ff4240] px-12 py-4 rounded-xl">Register Now!</button>
+                        <button class="bg-[#ff4240] font-bold text-xl text-white px-10 py-3 rounded-xl">Register Now!</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-20">
+            <div>
+                <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
+                    <h3 class="md:text-4xl text-2xl font-extrabold">Our New Products</h3>
+                    <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 my-12 gap-10">
+                    <div class="bg-base-100 shadow-xl flex flex-col items-center md:flex-row">
+                        <img class="w-[90%] md:w-1/3" src="images/5.png" alt="Movie"/>
+                        <div class="card-body">
+                            <div>
+                                <div class="flex space-x-2">
+                                    <img src="images/star.png" alt=""><span>5.0</span> <img class="pl-3" src="images/eye.png" alt=""><span>20</span> <img class="pl-3" src="images/love.png" alt=""><span>200</span>
+                                </div>
+                            </div>
+                          <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+                          <p class="pr-7">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                          <div class="flex justify-between">
+                            <p class="text-xl font-bold text-[#ff4240]">Price - $22.00</p>
+                            <div class="flex w-[53%] justify-around">
+                                <img class="mr-2" src="images/delivery.png" alt="">
+                                <p> Delivery Fee: Free</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="bg-base-100 shadow-xl flex flex-col items-center md:flex-row">
+                        <img class="w-[90%] md:w-1/3" src="images/6.png" alt="Movie"/>
+                        <div class="card-body">
+                            <div>
+                                <div class="flex space-x-2">
+                                    <img src="images/star.png" alt=""><span>5.0</span> <img class="pl-3" src="images/eye.png" alt=""><span>20</span> <img class="pl-3" src="images/love.png" alt=""><span>200</span>
+                                </div>
+                            </div>
+                          <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+                          <p class="pr-7">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                          <div class="flex justify-between">
+                            <p class="text-xl font-bold text-[#ff4240]">Price - $22.00</p>
+                            <div class="flex w-[53%] justify-around">
+                                <img class="mr-2" src="images/delivery.png" alt="">
+                                <p> Delivery Fee: Free</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="bg-base-100 shadow-xl flex flex-col items-center md:flex-row">
+                        <img class="w-[90%] md:w-1/3" src="images/7.png" alt="Movie"/>
+                        <div class="card-body">
+                            <div>
+                                <div class="flex space-x-2">
+                                    <img src="images/star.png" alt=""><span>5.0</span> <img class="pl-3" src="images/eye.png" alt=""><span>20</span> <img class="pl-3" src="images/love.png" alt=""><span>200</span>
+                                </div>
+                            </div>
+                          <h2 class="card-title text-xl font-extrabold">Cap For Hockeys</h2>
+                          <p class="pr-7">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                          <div class="flex justify-between">
+                            <p class="text-xl font-bold text-[#ff4240]">Price - $22.00</p>
+                            <div class="flex w-[53%] justify-around">
+                                <img class="mr-2" src="images/delivery.png" alt="">
+                                <p> Delivery Fee: Free</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="bg-base-100 shadow-xl flex flex-col items-center md:flex-row">
+                        <img class="w-[90%] md:w-1/3" src="images/8.png" alt="Movie"/>
+                        <div class="card-body">
+                            <div>
+                                <div class="flex space-x-2">
+                                    <img src="images/star.png" alt=""><span>5.0</span> <img class="pl-3" src="images/eye.png" alt=""><span>20</span> <img class="pl-3" src="images/love.png" alt=""><span>200</span>
+                                </div>
+                            </div>
+                          <h2 class="card-title text-xl font-extrabold">Zarsy For Hockeys</h2>
+                          <p class="pr-7">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                          <div class="flex justify-between">
+                            <p class="text-xl font-bold text-[#ff4240]">Price - $22.00</p>
+                            <div class="flex w-[53%] justify-around">
+                                <img class="mr-2" src="images/delivery.png" alt="">
+                                <p> Delivery Fee: Free</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="bg-base-100 shadow-xl flex flex-col items-center md:flex-row">
+                        <img class="w-[90%] md:w-1/3" src="images/9.png" alt="Movie"/>
+                        <div class="card-body">
+                            <div>
+                                <div class="flex space-x-2">
+                                    <img src="images/star.png" alt=""><span>5.0</span> <img class="pl-3" src="images/eye.png" alt=""><span>20</span> <img class="pl-3" src="images/love.png" alt=""><span>200</span>
+                                </div>
+                            </div>
+                          <h2 class="card-title text-xl font-extrabold">Helmate For Hockeys</h2>
+                          <p class="pr-7">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                          <div class="flex justify-between">
+                            <p class="text-xl font-bold text-[#ff4240]">Price - $22.00</p>
+                            <div class="flex w-[53%] justify-around">
+                                <img class="mr-2" src="images/delivery.png" alt="">
+                                <p> Delivery Fee: Free</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="bg-base-100 shadow-xl flex flex-col items-center md:flex-row">
+                        <img class="w-[90%] md:w-1/3" src="images/10.png" alt="Movie"/>
+                        <div class="card-body">
+                            <div>
+                                <div class="flex space-x-2">
+                                    <img src="images/star.png" alt=""><span>5.0</span> <img class="pl-3" src="images/eye.png" alt=""><span>20</span> <img class="pl-3" src="images/love.png" alt=""><span>200</span>
+                                </div>
+                            </div>
+                          <h2 class="card-title text-xl font-extrabold">World Cup Football</h2>
+                          <p class="pr-7">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                          <div class="flex justify-between">
+                            <p class="text-xl font-bold text-[#ff4240]">Price - $22.00</p>
+                            <div class="flex w-[53%] justify-around">
+                                <img class="mr-2" src="images/delivery.png" alt="">
+                                <p> Delivery Fee: Free</p>
+                            </div>
+                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
