--- a/index.html
+++ b/index.html
@@ -280,8 +280,79 @@
                 </div>
             </div>
         </section>
+
+        <!-- Clients Question section start -->
+        <section>
+            <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
+                <h3 class="md:text-4xl text-2xl font-extrabold">Clients Question</h3>
+                <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="flex flex-col md:flex-row gap-10 py-16">
+                <div><img src="images/11.png" alt=""></div>
+                <div>
+                    <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-bold">
+                            Our Equipment
+                        </div>
+                        <div class="collapse-content"> 
+                          <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-bold">
+                            Hockey Training
+                        </div>
+                        <div class="collapse-content"> 
+                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-bold">
+                            Private Lessons
+                        </div>
+                        <div class="collapse-content"> 
+                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-bold">
+                            Ski Touring
+                        </div>
+                        <div class="collapse-content"> 
+                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-bold">
+                            Booking
+                        </div>
+                        <div class="collapse-content"> 
+                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-bold">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+        <!-- Clients Question section finish -->
+
     </main>
-    <footer class="bg-[#131318]">
+        <!-- footer section start -->
+
+        <footer class="bg-[#131318]">
     <div class="grid grid-cols-2 md:grid-cols-5 gap-10 footer py-20 text-white ">
         <div class="space-y-5 col-span-2 mx-auto p-10 md:p-0">
             <h3 class="text-3xl font-bold">Get In Touch</h3>
@@ -319,6 +390,9 @@
                 <h5>Hockeys for Adult</h5>
         </div> 
     </div>
-    </footer>
+        </footer>
+        <!-- footer section finish -->
+
+
 </body>
 </html>
