get in touch section added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </style>
 </head>
 <body>
+    <!-- header section start -->
     <header>
         <nav class="my-4">
             <div class=" mx-auto">
@@ -96,11 +97,14 @@
               </div>
         </div>
     </header>
+    <!-- header section finish -->
     <main>
+
+        <!-- progress section start -->
         <section>
             <div class="py-20 mx-auto">
-                <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
-                    <h3 class="md:text-4xl text-2xl font-extrabold">Professional Hockeys Club</h3>
+                <div class="px-5 md:w-3/5 md:mx-auto text-center flex flex-col items-center justify-center space-y-4">
+                    <h3 class="md:text-4xl text-2xl font-extrabold">Program Sections </h3>
                     <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-4">
@@ -127,9 +131,12 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
-                <h3 class="md:text-4xl text-2xl font-extrabold">Program Sections</h3>
+        <!-- progress section start -->
+
+        <!-- Professional Hockeys Club start -->
+        <section class="my-16">
+            <div class="px-5 md:w-3/5 md:mx-auto text-center flex flex-col items-center justify-center space-y-4">
+                <h3 class="md:text-4xl text-2xl font-extrabold">Professional Hockeys Club</h3>
                 <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-5 my-8">
@@ -156,9 +163,12 @@
                 </div>
             </div>
         </section>
+        <!-- Professional Hockeys Club finish -->
+
+        <!-- our new product start -->
         <section class="py-20">
             <div>
-                <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
+                <div class="px-5 md:w-3/5 md:mx-auto text-center flex flex-col items-center justify-center space-y-4">
                     <h3 class="md:text-4xl text-2xl font-extrabold">Our New Products</h3>
                     <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
                 </div>
@@ -280,10 +290,11 @@
                 </div>
             </div>
         </section>
+        <!-- our new product finish -->
 
         <!-- Clients Question section start -->
         <section>
-            <div class="w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
+            <div class="px-5 md:w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
                 <h3 class="md:text-4xl text-2xl font-extrabold">Clients Question</h3>
                 <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
@@ -296,7 +307,7 @@
                             Our Equipment
                         </div>
                         <div class="collapse-content"> 
-                          <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                          <p class="md:pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
                         </div>
                       </div>
                       <div class="collapse collapse-plus ">
@@ -305,7 +316,7 @@
                             Hockey Training
                         </div>
                         <div class="collapse-content"> 
-                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="md:pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
                         </div>
                       </div>
                       <div class="collapse collapse-plus ">
@@ -314,7 +325,7 @@
                             Private Lessons
                         </div>
                         <div class="collapse-content"> 
-                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="md:pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
                         </div>
                       </div>
                       <div class="collapse collapse-plus">
@@ -323,7 +334,7 @@
                             Ski Touring
                         </div>
                         <div class="collapse-content"> 
-                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="md:pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
                         </div>
                       </div>
                       <div class="collapse collapse-plus ">
@@ -332,7 +343,7 @@
                             Booking
                         </div>
                         <div class="collapse-content"> 
-                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="md:pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
                         </div>
                       </div>
                       <div class="collapse collapse-plus ">
@@ -341,13 +352,77 @@
                             Pricings
                         </div>
                         <div class="collapse-content"> 
-                            <p class="pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="md:pr-20">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
                         </div>
                       </div>
                 </div>
             </div>
         </section>
         <!-- Clients Question section finish -->
+
+        <!-- Get In Touch section start -->
+        <section class="my-20">
+            <div class="px-5 md:w-3/5 mx-auto text-center flex flex-col items-center justify-center space-y-4">
+                <h3 class="md:text-4xl text-2xl font-extrabold">Get In Touch</h3>
+                <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="flex flex-col px-5 md:px-0 gap-10 md:flex-row my-16">
+                <div>
+                    <div class="card max-w-96 bg-[#BCED6D1A] shadow-xl my-8">
+                        <div class="card-body">
+                            <img class="w-12" src="images/phone.png" alt="">
+                          <p>Phone Number : </p>
+                            <h2 class="card-title">(+62) 123-321-543</h2>
+                        </div>
+                      </div>
+                      <div class="card max-w-96 bg-[#FDDD5F1A] shadow-xl my-8">
+                        <div class="card-body">
+                            <img class="w-12" src="images/sms.png" alt="">
+                          <p>Email : </p>
+                            <h2 class="card-title">hockeys@support.com</h2>
+                        </div>
+                      </div>
+                      <div class="card max-w-96 bg-[#629cf31a] shadow-xl my-8">
+                        <div class="card-body">
+                            <img class="w-12" src="images/map.png" alt="">
+                          <p>Location :  </p>
+                            <h2 class="card-title">152/1 Mohakhali Wireless Gate</h2>
+                        </div>
+                      </div>
+                </div>
+                <div>
+                    <form action="">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                            <div class="space-y-3">
+                                <label class="text-xl font-bold" for="">Your Name:</label>
+                                <input type="text" placeholder="Enter your full name" class="input bg-[#13131808] rounded-2xl w-full " />
+                            </div>
+                            <div class="space-y-3">
+                                <label class="text-xl font-bold" for="">Your Email:</label>
+                                <input type="text" placeholder="Enter your Email" class="input bg-[#13131808] rounded-2xl w-full " />
+                            </div>
+                            <div class="space-y-3">
+                                <label class="text-xl font-bold" for="">Subject :</label>
+                                <input type="text" placeholder="Enter your Subject" class="input bg-[#13131808] rounded-2xl w-full " />
+                            </div>
+                            <div class="space-y-3">
+                                <label class="text-xl font-bold" for="">Phone Number :</label>
+                                <input type="text" placeholder="Enter your phone number" class="input bg-[#13131808] rounded-2xl w-full " />
+                            </div>
+                            <div class="space-y-3 md:col-span-2">
+                                <label class="text-xl font-bold" for="">Masage:</label>
+                                <textarea class="textarea rounded-2xl bg-[#13131808] w-full" placeholder="Write your message" rows="10"></textarea>
+                            </div>
+                            <div class="space-y-3 md:col-span-2">
+                                <button class="btn btn-success border-none text-white bg-[#FF4240] w-full">Send Message</button>
+                            </div>
+
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- Get In Touch section finish -->
 
     </main>
         <!-- footer section start -->
