get in touch section added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </nav>
         <div>
-            <div class="carousel  w-full">
+            <div class="carousel max-h-[550px] w-full">
                 <div id="slide1" class="carousel-item relative w-full">
                   <img src="images/1.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -109,11 +109,11 @@
     <!-- header section finish -->
     <main>
 
-        <!-- progress section start -->
+        <!-- Professional Hockeys Club section start -->
         <section>
             <div class="py-20 mx-auto">
                 <div class="px-5 md:w-3/5 md:mx-auto text-center flex flex-col items-center justify-center space-y-4">
-                    <h3 class="md:text-4xl text-2xl font-extrabold">Program Sections </h3>
+                    <h3 class="md:text-4xl text-2xl font-extrabold">Professional Hockeys Club </h3>
                     <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-4">
@@ -140,12 +140,12 @@
                 </div>
             </div>
         </section>
-        <!-- progress section start -->
+        <!-- Professional Hockeys Club section start -->
 
-        <!-- Professional Hockeys Club start -->
+        <!-- program section start -->
         <section class="my-16">
             <div class="px-5 md:w-3/5 md:mx-auto text-center flex flex-col items-center justify-center space-y-4">
-                <h3 class="md:text-4xl text-2xl font-extrabold">Professional Hockeys Club</h3>
+                <h3 class="md:text-4xl text-2xl font-extrabold">Program Section <h3>
                 <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-5 my-8">
@@ -172,7 +172,7 @@
                 </div>
             </div>
         </section>
-        <!-- Professional Hockeys Club finish -->
+        <!-- program  section finish -->
 
         <!-- our new product start -->
         <section class="py-20">
@@ -430,7 +430,7 @@
                     </form>
                 </div>
             </div>
-            <div class="py-7 rounded-xl text-center bg-[#13131808]">
+            <div class="py-8 rounded-xl text-center bg-[#13131808]">
                 <h3 class="font-extrabold text-2xl mb-4">Social Media</h3>
                 <div class="flex justify-center gap-5">
                     <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a>
@@ -448,7 +448,7 @@
     <div class="grid grid-cols-2 md:grid-cols-5 gap-10 footer py-20 text-white ">
         <div class="space-y-5 col-span-2 mx-auto p-10 md:p-0">
             <h3 class="text-3xl font-bold">Get In Touch</h3>
-            <p class="md:w-2/3">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <p class="md:w-2/3 text-white">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             <div class="flex items-center">
                 <img class="w-5 mr-3" src="images/sms.png" alt="">
                 <h5>hockeys@support.com</h5>
