--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
                     </div>
                     <div class="text-center space-y-4 mt-12 mx-10 md:mx-0">
-                        <div class="radial-progress text-orange-500" style="--value:90;" role="progressbar">90%</div>
+                        <div class="radial-progress text-yellow-400" style="--value:90;" role="progressbar">90%</div>
                         <h4 class="text-xl font-semibold">Prayer Facility</h4>
                         <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
                     </div>
@@ -149,21 +149,21 @@
                 <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-5 my-8">
-                <div class="rounded-2xl p-10 mt-4 md:pt-20  md:pr-16 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/2.png)]">
+                <div class="rounded-2xl p-8 mt-4 md:pt-20  md:pr-16 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/2.png)]">
                     <div class="space-y-6">
                         <h3 class="text-3xl font-bold text-white">Junior Program</h3>
                         <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
                         <button class="bg-[#ff4240] text-white font-bold text-xl px-10 py-3 rounded-xl">Register Now!</button>
                     </div>
                 </div>
-                <div class="rounded-2xl p-10 mt-4 md:pt-20  md:pr-16 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/3.png)]">
+                <div class="rounded-2xl p-8 mt-4 md:pt-20  md:pr-16 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/3.png)]">
                     <div class="space-y-6">
                         <h3 class="text-3xl font-bold text-white">Teenager Program</h3>
                         <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
                         <button class="bg-[#ff4240] font-bold text-white text-xl px-10 py-3 rounded-xl">Register Now!</button>
                     </div>
                 </div>
-                <div class="rounded-2xl bg-cover md:col-span-2 mt-4 p-10 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/4.png)]">
+                <div class="rounded-2xl bg-cover md:col-span-2 mt-4 p-8 bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/4.png)]">
                     <div class="space-y-6 md:w-1/2 md:mt-28">
                         <h3 class="text-3xl font-bold text-white">Professional Program</h3>
                         <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
